# docs/swagger.json
@@ -27,7 +27,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/diploma_modules_auth_handler_model.LoginInput"
+                            "$ref": "#/definitions/model.LoginInput"
                         }
                     }
                 ],
@@ -35,13 +35,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/diploma_modules_auth_handler_model.LoginResponse"
+                            "$ref": "#/definitions/model.LoginResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/gin.H"
+                            "$ref": "#/definitions/diploma_modules_auth_handler_model.ErrorResponse"
                         }
                     }
                 }
@@ -67,7 +67,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/diploma_modules_auth_handler_model.RegisterInput"
+                            "$ref": "#/definitions/model.RegisterInput"
                         }
                     }
                 ],
@@ -75,13 +75,13 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/diploma_modules_auth_handler_model.RegisterResponse"
+                            "$ref": "#/definitions/model.RegisterResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/gin.H"
+                            "$ref": "#/definitions/diploma_modules_auth_handler_model.ErrorResponse"
                         }
                     }
                 }
@@ -109,7 +109,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/diploma_modules_cart_handler_model.GetCartResponse"
+                            "$ref": "#/definitions/model.GetCartResponse"
                         }
                     },
                     "400": {
@@ -146,7 +146,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/diploma_modules_cart_handler_model.AddProductToCartInput"
+                            "$ref": "#/definitions/model.AddProductToCartInput"
                         }
                     }
                 ],
@@ -154,7 +154,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/diploma_modules_cart_handler_model.AddProductToCardResponse"
+                            "$ref": "#/definitions/model.AddProductToCardResponse"
                         }
                     },
                     "400": {
@@ -207,6 +207,86 @@
                 }
             }
         },
+        "/api/cart/delete": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Deletes given quantity of product by product_id and supplier_id from cart",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "cart"
+                ],
+                "summary": "Delete product from cart",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Product ID",
+                        "name": "product_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Supplier ID",
+                        "name": "supplier_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Quantity to delete (default 1)",
+                        "name": "quantity",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/order": {
             "get": {
                 "security": [
@@ -231,7 +311,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/diploma_modules_order_handler_model.GetOrdersResponse"
+                                "$ref": "#/definitions/model.GetOrdersResponse"
                             }
                         }
                     },
@@ -275,13 +355,13 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/diploma_modules_product_handler_model.ProductResponse"
+                            "$ref": "#/definitions/model.ProductResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/gin.H"
+                            "$ref": "#/definitions/diploma_modules_product_handler_model.ErrorResponse"
                         }
                     }
                 }
@@ -318,13 +398,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/diploma_modules_product_handler_model.ProductListResponse"
+                            "$ref": "#/definitions/model.ProductListResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/gin.H"
+                            "$ref": "#/definitions/diploma_modules_product_handler_model.ErrorResponse"
                         }
                     }
                 }
@@ -332,79 +412,11 @@
         }
     },
     "definitions": {
-        "diploma_modules_auth_handler_model.LoginInput": {
+        "diploma_modules_auth_handler_model.ErrorResponse": {
             "type": "object",
             "properties": {
-                "password": {
-                    "type": "string",
-                    "example": "secure123"
-                },
-                "phone_number": {
-                    "type": "string",
-                    "example": "+123456789"
-                }
-            }
-        },
-        "diploma_modules_auth_handler_model.LoginResponse": {
-            "type": "object",
-            "properties": {
-                "access_token": {
+                "error": {
                     "type": "string"
-                },
-                "refresh_token": {
-                    "type": "string"
-                }
-            }
-        },
-        "diploma_modules_auth_handler_model.RegisterInput": {
-            "type": "object",
-            "properties": {
-                "confirm_password": {
-                    "type": "string",
-                    "example": "secure123"
-                },
-                "name": {
-                    "type": "string",
-                    "example": "John Doe"
-                },
-                "password": {
-                    "type": "string",
-                    "example": "secure123"
-                },
-                "phone_number": {
-                    "type": "string",
-                    "example": "+123456789"
-                }
-            }
-        },
-        "diploma_modules_auth_handler_model.RegisterResponse": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer",
-                    "example": 1
-                }
-            }
-        },
-        "diploma_modules_cart_handler_model.AddProductToCardResponse": {
-            "type": "object",
-            "properties": {
-                "status": {
-                    "type": "string"
-                }
-            }
-        },
-        "diploma_modules_cart_handler_model.AddProductToCartInput": {
-            "type": "object",
-            "properties": {
-                "product_id": {
-                    "type": "integer"
-                },
-                "quantity": {
-                    "type": "integer"
-                },
-                "supplier_id": {
-                    "type": "integer"
                 }
             }
         },
@@ -413,23 +425,6 @@
             "properties": {
                 "error": {
                     "type": "string"
-                }
-            }
-        },
-        "diploma_modules_cart_handler_model.GetCartResponse": {
-            "type": "object",
-            "properties": {
-                "customer_id": {
-                    "type": "integer"
-                },
-                "suppliers": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/diploma_modules_cart_handler_model.Supplier"
-                    }
-                },
-                "total": {
-                    "type": "integer"
                 }
             }
         },
@@ -487,17 +482,6 @@
             "properties": {
                 "error": {
                     "type": "string"
-                }
-            }
-        },
-        "diploma_modules_order_handler_model.GetOrdersResponse": {
-            "type": "object",
-            "properties": {
-                "orders": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/diploma_modules_order_handler_model.Order"
-                    }
                 }
             }
         },
@@ -569,6 +553,14 @@
                 }
             }
         },
+        "diploma_modules_product_handler_model.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
         "diploma_modules_product_handler_model.Product": {
             "type": "object",
             "properties": {
@@ -583,28 +575,6 @@
                 },
                 "name": {
                     "type": "string"
-                }
-            }
-        },
-        "diploma_modules_product_handler_model.ProductListResponse": {
-            "type": "object",
-            "properties": {
-                "product_list": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/diploma_modules_product_handler_model.Product"
-                    }
-                },
-                "total": {
-                    "type": "integer"
-                }
-            }
-        },
-        "diploma_modules_product_handler_model.ProductResponse": {
-            "type": "object",
-            "properties": {
-                "product": {
-                    "$ref": "#/definitions/diploma_modules_product_handler_model.DetailedProduct"
                 }
             }
         },
@@ -642,9 +612,131 @@
                 }
             }
         },
-        "gin.H": {
+        "model.AddProductToCardResponse": {
             "type": "object",
-            "additionalProperties": {}
+            "properties": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.AddProductToCartInput": {
+            "type": "object",
+            "properties": {
+                "product_id": {
+                    "type": "integer"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "supplier_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "model.GetCartResponse": {
+            "type": "object",
+            "properties": {
+                "customer_id": {
+                    "type": "integer"
+                },
+                "suppliers": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/diploma_modules_cart_handler_model.Supplier"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "model.GetOrdersResponse": {
+            "type": "object",
+            "properties": {
+                "orders": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/diploma_modules_order_handler_model.Order"
+                    }
+                }
+            }
+        },
+        "model.LoginInput": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "secure123"
+                },
+                "phone_number": {
+                    "type": "string",
+                    "example": "+123456789"
+                }
+            }
+        },
+        "model.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.ProductListResponse": {
+            "type": "object",
+            "properties": {
+                "product_list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/diploma_modules_product_handler_model.Product"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "model.ProductResponse": {
+            "type": "object",
+            "properties": {
+                "product": {
+                    "$ref": "#/definitions/diploma_modules_product_handler_model.DetailedProduct"
+                }
+            }
+        },
+        "model.RegisterInput": {
+            "type": "object",
+            "properties": {
+                "confirm_password": {
+                    "type": "string",
+                    "example": "secure123"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "John Doe"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "secure123"
+                },
+                "phone_number": {
+                    "type": "string",
+                    "example": "+123456789"
+                }
+            }
+        },
+        "model.RegisterResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                }
+            }
         }
     },
     "securityDefinitions": {
