# modules/auth/handler/model/user.go
@@ -20,3 +20,7 @@ type LoginResponse struct {
 	AccessToken  string `json:"access_token"`
 	RefreshToken string `json:"refresh_token"`
 }
+
+type ErrorResponse struct {
+	Err string `json:"error"`
+}
